Fixed bg image not displaying correctly on mobile, modified paddings on different views

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ p {
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center top;
-    background-attachment: fixed;
+    background-attachment: scroll;
     width: 100%;
     min-height: 100vh !important;
     box-shadow: 0px 4px 4px 0px white,inset 0 0 0 1000px rgba(255, 255, 255, 0.7)
@@ -29,6 +29,12 @@ p {
 
     /* Estilos ipad */
     @media (min-width: 768px) and (max-width: 1024px) {
+
+      #contacto {
+        padding: 50px 0 0 0;
+        margin: 0 -20px;
+      }
+
       .bg-shared {
         background-image: url('./images/white_keyboard-bg.jpg') !important;
         padding-bottom: 10%;
@@ -36,7 +42,19 @@ p {
         min-height: 100vh !important;
       }
     }
-  
+    
+  /* Estilos mobile */
+    @media (max-width: 430px) {
+      .more-about-container {
+        padding: 0px 0px;
+      }
+
+      #contacto {
+        padding: 50px 0 0 0;
+        margin: 0 -17px;
+      }
+    }
+
   .arrow-icon{
     position: fixed;
     bottom: 20px;
