--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,12 +1,15 @@
 @media (max-width: 991px) {
     .navbar-nav {
+    margin-top: 20px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+    padding: 10px;
     color: black;
     background-color: rgb(255, 255, 255);
     position:relative;
     z-index: 1000 !important;
       }
     .navbar-nav .nav-item .nav-link {
-      padding: 8px;
+      padding: 12px;
     }
     .nav-link {
       padding: 10px 20px 10px 20px;
