--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -166,6 +166,10 @@ ul li {
     margin-right: auto;
 }
 
+.project {
+  padding: 0px 17px;
+}
+
 #hifi p {
     font-size: 16px;
     color: #555;
